# mnist-draw-classifier

./: .gitignore  Dockerfile.app  Untitled Diagram.drawio  docker-compose.yml  nginx.conf  pyproject.toml
mnist_draw_classifier/: main.py  mnist.py  model.py
